# article-materials

./: LICENSE
005_diff_api_perf/: .env  generate_data.py  pyproject.toml
005_diff_api_perf/part1/chiapp/: go.sum  main.go
005_diff_api_perf/part1/djangoapp-drf/djangoapp/: settings.py  urls.py
005_diff_api_perf/part1/djangoapp-drf/testapp/: serializers.py  views.py
005_diff_api_perf/part1/djangoapp/testapp/: models.py  views.py
005_diff_api_perf/part1/djangoapp/testapp/migrations/: 0001_initial.py
005_diff_api_perf/part1/expressapp/: app.js  package-lock.json  package.json
005_diff_api_perf/part1/expressapp/prisma/: schema.prisma
005_diff_api_perf/part1/fastapiapp/: main.py
005_diff_api_perf/part1/fastapiapp-async/: main.py
005_diff_api_perf/part2/chiapp/: go.mod  main.go
005_diff_api_perf/part2/djangoapp/testapp/: views.py
005_diff_api_perf/part2/expressapp/: app.js  app_cluster.js
005_diff_api_perf/part2/fastapiapp/: main.py  test_data.json
005_diff_api_perf/part2/fastapiapp-async/: main.py
006_pyserialization/: pyproject.toml  test.py
006_pyserialization/djangoapp/djangoapp/: settings.py  urls.py
006_pyserialization/djangoapp/testapp/: test_data.py  views.py
007_django_split_auth/split/account/: backends.py  models.py  session.py
007_django_split_auth/split/split/: asgi.py  wsgi.py
007_djangosplitusers/: pyproject.toml
007_djangosplitusers/split/account/: admin.py  views.py
007_djangosplitusers/split/account/migrations/: 0001_initial.py
007_djangosplitusers/split/split/: settings.py  urls.py
(+1 files in other folders)
